--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -14,6 +14,15 @@
         <link rel="stylesheet" href="{{ asset('css/main.css') }}">        
     {% endblock %}
 
+    <!-- AdSense -->
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+      (adsbygoogle = window.adsbygoogle || []).push({
+        google_ad_client: "ca-pub-3109635632403464",
+        enable_page_level_ads: true
+      });
+    </script>
+
   </head>
   <body>
 
