--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -11,12 +11,19 @@
         <div class="row">
             <div class="col-lg-8 col-md-12 mb60">
                 <h2>Premium T-Shirts</h2>
-                <p>Browse shirts by:</p>
 
-                <div class="btn-group filter" role="group" aria-label="Browse by sex">
-                    <button data-filter="all" type="button" class="all btn btn-secondary active">All</button>
-                    <button data-filter="men" type="button" class="men btn btn-secondary">Men</button>
-                    <button data-filter="women" type="button" class="women btn btn-secondary">Women</button>
+                <div class="btn-toolbar" role="toolbar" aria-label="Toolbar with button groups">
+                    <div class="btn-group mr-3 filter" role="sex" aria-label="Browse by sex">
+                        <button data-filter="all" type="button" class="all btn btn-success active">All</button>
+                        <button data-filter="men" type="button" class="men btn btn-success">Men</button>
+                        <button data-filter="women" type="button" class="women btn btn-success">Women</button>
+                    </div>
+
+                    <div class="btn-group filter" role="type" aria-label="Browse by type">
+                        <button data-filter="all" type="button" class="all btn btn-info active">All</button>
+                        <button data-filter="short-sleeve-t" type="button" class="short-sleeve-t btn btn-info">Short Sleeve</button>
+                        <button data-filter="long-sleeve-t" type="button" class="long-sleeve-t btn btn-info">Long Sleeve</button>
+                    </div>
                 </div>
 
                 <div class="row products">
@@ -25,7 +32,7 @@
                         <div class="col-md-6 product {{ product.sex|default('uni') }}">
                             <a href="#">
                                 <div class="card bg-dark text-white">
-                                    <img class="card-img" src="{{ asset('img/jackie.jpg') }}" alt="Card image">
+                                    <img class="card-img" src="img/{{ product.featuredImage.filename|default('jackie.jpg') }}" alt="{{ product.featuredImage.name|default('') }}">
                                     <div class="card-img-overlay">
                                         <h4 class="card-title">
                                             {% if product.sex %}
