--- a/web/css/main.css
+++ b/web/css/main.css
@@ -1,5 +1,10 @@
-.main.container {
+.main.container,
+.main.container-fluid {
     margin-top: 125px;
+}
+
+button {
+    cursor: pointer;
 }
 
 .navbar-brand {
@@ -48,4 +53,17 @@
 }
 .footer .founded {
     font-size: .75em;
+}
+
+.carousel-product-image {
+    max-height: 260px;
+    margin: 0 auto;
+}
+
+.carousel-thumbnails {
+}
+
+.carousel-thumbnails img {
+    height: 100px;
+    cursor: pointer;
 }
