--- a/app/Resources/views/partials/modals.html
+++ b/app/Resources/views/partials/modals.html
@@ -14,15 +14,11 @@
                     <div class="row">
 
                         <div class="col-md-6">
-                            <div id="p{{ product.id }}-carousel" class="carousel slide" data-ride="carousel">
+                            <div id="p{{ product.id }}-carousel" class="carousel slide" data-ride="carousel" data-interval="false">
                                 <div class="carousel-inner">
 
-                                    <div class="carousel-item active">
-                                        <img class="d-block w-100" src="img/{{ product.featuredImage.filename|default('jackie.jpg') }}" alt="{{ product.featuredImage.name|default('pic not found') }}">
-                                    </div>
-
                                     {% for productImage in product.productImages %}
-                                        <div class="carousel-item">
+                                        <div class="carousel-item{% if loop.first %} active{% endif %}">
                                             <img class="d-block w-100" src="img/{{ productImage.image.filename }}" alt="{{ productImage.image.name }}">
                                         </div>
                                     {% endfor %}
@@ -31,11 +27,8 @@
                             </div>
 
                             <div class="carousel-thumbnails mt-1">
-
-                                <img data-target="#p{{ product.id }}-carousel" data-slide-to="0" class="active" src="img/{{ product.featuredImage.filename|default('jackie.jpg') }}">
-
                                 {% for productImage in product.productImages %}
-                                    <img data-target="#p{{ product.id }}-carousel" data-slide-to="{{ loop.index }}" src="img/{{ productImage.image.filename }}">
+                                    <img data-target="#p{{ product.id }}-carousel" data-slide-to="{{ loop.index0 }}" class="{% if loop.first %}active{% endif %}"src="img/{{ productImage.image.filename }}">
                                 {% endfor %}
                             </div>
                         </div>
