--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-      <a class="navbar-brand" href="#">Shirts For Photographers</a>
+      <a class="navbar-brand" href="/">Shirts For Photographers</a>
     </nav>
 
     {% include 'partials/modals.html' %}
