--- a/app/Resources/views/partials/modals.html
+++ b/app/Resources/views/partials/modals.html
@@ -19,6 +19,10 @@
                         <div class="col-md-6">
                             {% include 'partials/product-details.html' %}
                         </div>
+
+                        <div class="col-md-12">
+                            {% include 'partials/product-sharing.html' %}
+                        </div>
                     </div>
 
                 </div>
