breadcrumb home link

--- a/app/Resources/views/default/product.html.twig
+++ b/app/Resources/views/default/product.html.twig
@@ -25,7 +25,7 @@
 
         <nav aria-label="breadcrumb" role="navigation">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="#">ALL SHIRTS</a></li>
+            <li class="breadcrumb-item"><a href="/">ALL SHIRTS</a></li>
             <li class="breadcrumb-item active" aria-current="page">{{ product.Name }}</li>
           </ol>
         </nav>
