--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,6 +30,14 @@
             <meta name="twitter:image" content="http://shirtsforphotographers.com/u/14-24-long-black.jpg">
         {% endblock %}
 
+        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+        <script>
+          (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-3109635632403464",
+            enable_page_level_ads: true
+          });
+        </script>
+
     </head>
     <body>
 
