--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="{{ asset('css/bootstrap-lux.min.css') }}">
             <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"-->
-            <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/main.css?1') }}">
             <link rel="stylesheet" href="{{ asset('rrssb/css/rrssb.css') }}">
         {% endblock %}
 
