--- a/app/Resources/views/partials/products.html
+++ b/app/Resources/views/partials/products.html
@@ -8,7 +8,7 @@
                     <img class="card-img" src="{{ uploads_url }}{{ product.featuredImage.image.filename|default('../jackie.jpg') }}" alt="{{ product.featuredImage.name|default('') }}">
                     <div class="card-img-overlay">
                         <h4 class="card-title">{{ product.fullName }}</h4>
-                        <div style="position: absolute; bottom: 10px; right: 10px; text-shadow: 1px 1px 1px #000000;">${{ product.price }}</div>
+                        <div class="price">${{ product.price }}</div>
                     </div>
                 </div>
             </a>
