--- a/web/css/main.css
+++ b/web/css/main.css
@@ -32,14 +32,24 @@ button {
 
 .product .card-img-overlay {
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&1+0,0+33 */
-    background: -moz-linear-gradient(top, rgba(0,0,0,.8) 0%, rgba(0,0,0,0) 33%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(top, rgba(0,0,0,.8) 0%,rgba(0,0,0,0) 33%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(to bottom, rgba(0,0,0,.8) 0%,rgba(0,0,0,0) 33%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    background: -moz-linear-gradient(top, rgba(0,0,0,.5) 0%, rgba(0,0,0,0) 33%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top, rgba(0,0,0,.5) 0%,rgba(0,0,0,0) 33%,rgba(0,0,0,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom, rgba(0,0,0,.5) 0%,rgba(0,0,0,0) 33%,rgba(0,0,0,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#000000', endColorstr='#00000000',GradientType=0 ); /* IE6-9 */
 }
 
-.product h4 {
+.product .card-title {
+    text-transform: none;
+    letter-spacing: 0;
     color: #FFFFFF;
+    text-shadow: 1px 1px 0px rgba(0, 0, 0, 0.5);
+}
+
+.product .price {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    color: #919aa1;
 }
 
 .filter button {
