lazy load product carousel images

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -64,7 +64,7 @@
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
             <script src="{{ asset('js/main.js') }}"></script>
-
+            <script src="{{ asset('js/lazyload.js') }}"></script>
             <script src="{{ asset('rrssb/js/rrssb.min.js') }}"></script>
 
             <!-- Google Analytics -->
