--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -10,9 +10,7 @@
         {% block stylesheets %}
             <!-- Bootstrap CSS -->
             <link rel="stylesheet" href="{{ asset('css/bootstrap-lux.min.css') }}">
-            <!--link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous"-->
-            <link rel="stylesheet" href="{{ asset('css/main.css?1') }}">
-            <link rel="stylesheet" href="{{ asset('rrssb/css/rrssb.css') }}">
+            <link rel="stylesheet" href="{{ asset('css/main.css?2') }}">
         {% endblock %}
 
         {% block opengraph %}
@@ -23,20 +21,10 @@
             <meta property="og:description" content="Simple, High Quality T-Shirts for Photographers"/>
 
             <meta name="twitter:card" content="summary_large_image">
-            <!--meta name="twitter:site" content="@therealkni">
-            <meta name="twitter:creator" content="@dbox" -->
             <meta name="twitter:title" content="Shirts For Photographers">
             <meta name="twitter:description" content="Simple, High Quality T-Shirts for Photographers">
             <meta name="twitter:image" content="http://shirtsforphotographers.com/u/14-24-long-black.jpg">
         {% endblock %}
-
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-          (adsbygoogle = window.adsbygoogle || []).push({
-            google_ad_client: "ca-pub-3109635632403464",
-            enable_page_level_ads: true
-          });
-        </script>
 
     </head>
     <body>
@@ -63,9 +51,7 @@
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-            <script src="{{ asset('js/main.js') }}"></script>
-            <script src="{{ asset('js/lazyload.js') }}"></script>
-            <script src="{{ asset('rrssb/js/rrssb.min.js') }}"></script>
+            <script src="{{ asset('js/main.js?2') }}"></script>
 
             <!-- Google Analytics -->
             <script async src="https://www.googletagmanager.com/gtag/js?id=UA-80617528-2"></script>
