default base open graph image

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -17,13 +17,13 @@
             <meta property="og:title" content="Shirts For Photographers" />
             <meta property="og:type" content="website" />
             <meta property="og:url" content="http://shirtsforphotographers.com" />
-            <meta property="og:image" content="http://shirtsforphotographers.com/u/14-24-long-black.jpg" />
+            <meta property="og:image" content="{{ default_open_graph_image }}" />
             <meta property="og:description" content="Simple, High Quality T-Shirts for Photographers"/>
 
             <meta name="twitter:card" content="summary_large_image">
             <meta name="twitter:title" content="Shirts For Photographers">
             <meta name="twitter:description" content="Simple, High Quality T-Shirts for Photographers">
-            <meta name="twitter:image" content="http://shirtsforphotographers.com/u/14-24-long-black.jpg">
+            <meta name="twitter:image" content="{{ default_open_graph_image }}">
         {% endblock %}
 
     </head>
